Seccion contexto, falta agregar historia

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -6,30 +6,31 @@
 \section{Conceptos importantes}
 
 \subsection{Enfoque de Von Neumann}
-\ojo{}{(Un poco de historia) El matemático John Von Neumann propone en el año...}Este enfoque generaliza la organización de las computadoras distinguiendo en tres partes interconectadas: La CPU (con la unidad aritmético-lógica o ALU y la unidad de control) la memoria, y un módulo de entrada/salida. \ojo{(con un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes)}{La interconexión es llevada a cabo por un un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes}. \\
+\ojo{}{(Un poco de historia) El matemático John Von Neumann propone en el año...}
 
-Con la propuesta de este modelo Von Neumann incorpora el concepto de \textbf{programa almacenado}\ojo{ contiene un conjunto de instrucciones que podían ser almacenadas en memoria, o sea, un programa que detalla la computación del mismo}{no entiendo esta frase. la puse yo?}. \ojo{El programa se codifica de cierta manera para que pueda ser almacenado y posteriormente ejecutado quizás múltiples veces. Ademas puede ser 'recordado' de esta manera se separa en el mecanismo de ejecución el hadware de la logica de computo o instrucciones (software).}
-{Con esta idea, el programa se codifica de cierta manera para que pueda ser almacenado en memoria principal y posteriormente ejecutado quizás múltiples veces. De esta manera, la lógica del programa puede ser ''recordada'' y el programa toma un valor mayor, a diferencia de lo que ocurría hasta entonces, donde el programa se reflejaba en un conjunto de configuraciones de cables aplicadas a los equipos. Esto implica una separación entre el mecanismo de ejecución (el hadware) y la lógica de computo o instrucciones (el software).}
+Este enfoque generaliza la organización de las computadoras distinguiendo en tres partes interconectadas: La CPU (con la unidad aritmético-lógica o ALU y la unidad de control) la memoria, y un módulo de entrada/salida. La interconexión es llevada a cabo por un un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes. \\
 
-Este tipo del diseño que permite un programa almacenado también da la posibilidad de que \ojo{los programas sean modificados ellos mismos durante su ejecución}{la ejecución de las instrucciones modifique el código máquina del mismo u otro programa}. Por ejemplo un programa podría modificar o incrementar \ojo{}{las referencias a} las direcciones de memoria que tenga en algunas instrucciones y luego volver a ejecutar dichas instrucciones con el fin de procesar celdas diferentes de memoria cada vez. Esta característica es potente \ojo{y a la vez  peligrosa}{pero presenta un alto riesgo} pues las modificaciones en los programas podía ser algo perjudicial, por accidente o por diseño.
+Con la propuesta de este modelo Von Neumann incorpora el concepto de \textbf{programa almacenado}\ojo{ contiene un conjunto de instrucciones que podían ser almacenadas en memoria, o sea, un programa que detalla la computación del mismo}{no entiendo esta frase. la puse yo? Si mara, jajaja que hacemos? (tati)}. Con esta idea, el programa se codifica de cierta manera para que pueda ser almacenado en memoria principal y posteriormente ejecutado quizás múltiples veces. De esta manera, la lógica del programa puede ser ''recordada'' y el programa toma un valor mayor, a diferencia de lo que ocurría hasta entonces, donde el programa se reflejaba en un conjunto de configuraciones de cables aplicadas a los equipos. Esto implica una separación entre el mecanismo de ejecución (el hadware) y la lógica de computo o instrucciones (el software).
+
+Este tipo del diseño que permite un programa almacenado también da la posibilidad de que la ejecución de las instrucciones modifique el código máquina del mismo u otro programa. Por ejemplo un programa podría modificar o incrementar las referencias a las direcciones de memoria que tenga en algunas instrucciones y luego volver a ejecutar dichas instrucciones con el fin de procesar celdas diferentes de memoria cada vez. Esta característica es potente pero presenta un alto riesgo pues las modificaciones en los programas podía ser algo perjudicial, por accidente o por diseño.
 
 \subsection{Organización de la computadora}
 
-La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la \textbf{Unidad de Control}, \ojo{PC}{el contador de programa (PC o \PC)}, \ojo{IR}{el registro de instrucción (IR - \textit{Instruction Register})}, \ojo{Registros}{ otros registros de uso específico y general} y la \ojo{ALU}{Unidad Aritmético-Lógica (ALU)}.\\
+La CPU (Unidad Central de Procesamiento del inglés: Central Processing Unit), es el componente principal y el encargado ejecutar los programas y procesar los datos. La CPU contiene otros componentes de importancia tales como la \textbf{Unidad de Control}, el contador de programa (PC o \PC), el registro de instrucción (IR - \textit{Instruction Register}), otros registros de uso específico y general y la Unidad Aritmético-Lógica (ALU).\\
 
 La \UC\ dirige el ciclo de ejecución de cada instrucción, pidiendo la lectura de celdas de memoria donde esta alojada, decodificándola  y ejecutándola luego en colaboración con los otros componentes del sistema: si es una operación lógica o aritmética le ordena a la ALU su ejecución, si es de movimiento de datos colabora con la memoria ó el módulo de Entrada/Salida.\\
 
-El contador de programa (en inglés \PC\ o PC) es un registro que indica la posición de memoria donde estará la siguiente instrucción que debe ejecutarse. \ojo{Este registro se incrementa luego de cada ciclo de instrucción}{Luego de completar el ciclo de ejecución de una instrucción, el PC se incrementa en función de la cantidad de celdas que ocupa el código máquina de esta}.\\
+El contador de programa (en inglés \PC\ o PC) es un registro que indica la posición de memoria donde estará la siguiente instrucción que debe ejecutarse. Luego de completar el ciclo de ejecución de una instrucción, el PC se incrementa en función de la cantidad de celdas que ocupa el código máquina de esta.\\
 
-El registro de instrucción contiene \ojo{}{el código máquina de} la instrucción actual una vez que la misma es leída de memoria para luego decodificarla y ejecutarla.\\
+El registro de instrucción contiene el código máquina de la instrucción actual una vez que la misma es leída de memoria para luego decodificarla y ejecutarla.\\
 
-\ojo{Registros:  son elementos de una memoria de alta velocidad y poca capacidad que permite guardar y acceder a valores generalmente muy usados, por ejemplo, operandos en operaciones matemáticas. Hay diferentes tipos de registros, algunos }{El diseño de cada arquitectura ofrece un conjunto diferente de registros de uso general para ser usados en los programas. Estos registros son elementos de memoria de alta velocidad y poca capacidad que pueden ser utilizados como variables en los programas. Es importante marcar que } pueden guardar tanto datos como direcciones de memoria.\\
+El diseño de cada arquitectura ofrece un conjunto diferente de registros de uso general para ser usados en los programas. Estos registros son elementos de memoria de alta velocidad y poca capacidad que pueden ser utilizados como variables en los programas. Es importante marcar que pueden guardar tanto datos como direcciones de memoria.\\
 
-La \ALU, recibe su nombre de las siglas en inglés de \textit{Arithmetic and Logic Unit}. La ALU es un circuito digital que lleva a cabo operaciones aritméticas (suma, resta, multiplicación, división) y las operaciones lógicas \ojo{(Negacion, Y, O, O exclusivo)}{como la negación, disyunción, conjunción, etc.}, entre dos cadenas binarias que son interpretadas como números \ojo{}{o valores lógicos}.\\
+La \ALU, recibe su nombre de las siglas en inglés de \textit{Arithmetic and Logic Unit}. La ALU es un circuito digital que lleva a cabo operaciones aritméticas (suma, resta, multiplicación, división) y las operaciones lógicas como la negación, disyunción, conjunción, etc, entre dos cadenas binarias que son interpretadas como números o valores lógicos.\\
 
 La memoria es un conjunto de celdas numeradas. La numeración de cada celda la identifica inequívocamente por lo cual a esta numeración se le llama dirección. En cada celda de la memoria se pueden almacenar datos o instrucciones en forma de cadenas binarias y este contenido puede leerse y modificarse. En la memoria es donde se alojan los programas que luego serán ejecutados.\\
 
-\ojo{Buses: son los encargados de}{El bus de sistema es el encargado de} transferir los datos entre los componentes de la computadora.La unidad de control al pedir un contenido de una dirección de memoria lo hace a través del bus, y similarmente mismo cuando desea escribir en memoria.
+El bus de sistema es el encargado de transferir los datos entre los componentes de la computadora.La unidad de control al pedir un contenido de una dirección de memoria lo hace a través del bus, y similarmente mismo cuando desea escribir en memoria.
 
 \subsection{Ejecución de un programa}
 
