Secciones sobre tecnologia y sobre diagramas de clases

--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -136,35 +136,10 @@ La clase W16 que también esta en la figura \ref{ModoDireccionamiento}, represen
 \graf{ModoDireccionamiento}{Diagrama de clase de la \ModoDireccionamiento}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Como se observa en la figura \ref{ALU}
+%Como se observa en la figura \ref{}
 
-\graf{ALU}{Diagrama de clase de la \ALU}
+%\graf{}{Diagrama de clase de la \}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Como se observa en la figura \ref{ALU}
-
-\graf{ALU}{Diagrama de clase de la \ALU}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Como se observa en la figura \ref{ALU}
-
-\graf{ALU}{Diagrama de clase de la \ALU}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Como se observa en la figura \ref{ALU}
-
-\graf{ALU}{Diagrama de clase de la \ALU}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-Como se observa en la figura \ref{ALU}
-
-\graf{ALU}{Diagrama de clase de la \ALU}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-Como se observa en la figura \ref{ALU}
-
-\graf{ALU}{Diagrama de clase de la \ALU}
 
 %[width=0.7\textwidth]
 
