--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -40,12 +40,18 @@ En este caso escribimos un programa Qi con errores de sintaxis para ver como rea
 
 Agarramos el programa Qi invalido y se lo pasamos al Parser, cuando termina de chequear devuelve un error, como es de esperar devuelve una Exception porque dentro del archivo del programa hay una linea que tiene errores de sintaxis, el mensaje de la excepcion te muestra el numero de linea y la propia linea para que veas en donde te equivocaste. Capturamos la Excepcion y tomamos como resultado el mensaje y como ultimo paso comparamos el mensaje resultado con el mensaje esperado.
 \end{enumerate}
-\\
-\subsection{Ensamblado Objetos--> Codigo Maquina}
+
+\subsection{Ensamblado Objetos \longrightarrow Codigo Maquina}
 jajajjajja
 \subsection{Decodificacion Codigo Maquina --> Objetos (Iterprete)}
 aakkaakkaka
 \subsection{Ejecucion}
 alallalalala
+
+\subsubsection{Operaciones de ALU}
+
+\subsubsection{Busqueda de Operandos (para los distintos modos de direccionamiento)}
+
+\subsubsection{Almacenamiento de Operandos}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%55
 \section{Ejemplos de uso}
