termine otra subseccion de casos de prueba

--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -44,10 +44,13 @@ Agarramos el programa Qi invalido y se lo pasamos al Parser, cuando termina de c
 \end{enumerate}
 
 \subsection{Ensamblado (Objetos --+ Codigo Maquina)}
-jajajjajja
-\subsection{Decodificacion Codigo Maquina --+ Objetos (Iterprete)}
-Para poder verificar que la decodificacion 
 
+Para poder verificar que el ensamblado se realizo correctamente tomamos el programa Qi mencionado anteriormente y como sabemos que el resultado del parser nos devuelve un objeto programa que contiene un conjunto de objetos intrucciones, el ensamblado simplemente lo realiza cada instruccion, esto quiere decir que cada intruccion sabe ensamblarse. De esta forma realizamos el ensamblado del programa y obtenemos una lista de codigo maquina como resultado y como ultimo paso comparamos la lista de codigo maquina resultado con la lista codigo maquina esperado.
+
+
+  
+\subsection{Decodificacion Codigo Maquina --+ Objetos (Iterprete)}
+jajajja
 \subsection{Ejecucion}
 alallalalala
 
