historia de Von Neumann

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -6,7 +6,8 @@
 \section{Conceptos importantes}
 
 \subsection{Enfoque de Von Neumann}
-\ojo{}{(Un poco de historia) El matemático John Von Neumann propone en el año...}
+
+El matemático John Von Neumann en el año 1945 que por ese entonces se encontraba colaborando en el proyecto  ENIAC, se comenzó a interesar por la problemática que significaba la la necesidad de reconfigurar la máquina para cada nueva tarea y tan sólo cuatro años más tarde propone y desarrolla una solución a este problema la cual consistentía en poner la información sobre las operaciones a realizar en la misma memoria utilizada para los datos escribiendola en código binario al igual que los datos.
 
 Este enfoque generaliza la organización de las computadoras distinguiendo en tres partes interconectadas: La CPU (con la unidad aritmético-lógica o ALU y la unidad de control) la memoria, y un módulo de entrada/salida. La interconexión es llevada a cabo por un un bus de sistema que proporciona un medio de transporte de los datos entre las distintas partes. \\
 
