empezando seccion Ejecucion

--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -60,8 +60,15 @@ El resultado puede ser un error porque puede pasar que el codigo de operacion o 
 
 
 \subsection{Ejecucion}
-alallalalala
 
+Para verificar que la ejecucion de un programa Qi con el ciclo de instruccion se realice correctamente lo que hacemos es cargar el programa  en la memoria a traves del objeto simulador, de esta forma cuando se encuentra cargado esta listo para la ejecucion. Los pasos que se verifican son 3:
+
+el fetch 
+
+decode
+
+execute 
+  
 \subsubsection{Operaciones de ALU}
 
 \subsubsection{Busqueda de Operandos (para los distintos modos de direccionamiento)}
