comenzando seccion Estado del arte

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -367,6 +367,15 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Estado del arte (Susi)}
+\section{Estado del arte}
 
-Historia de Orga con respecto a los simuladores que se usaron 
+En un principio la materia Organizacion y Arquitectura eligio el simulador intel 8085 para enseniar assembler.
+
+\begin{enumerate}
+\item \textbf{Simulador intel 8085}
+
+Es un simulador y ensamblador para el microprocesador Intel 8085, que ofrece una interfas que a simple vista es dificil de entender, una parte para la ejecucion y otra parte para ver el estado de la memoria y registros. 
+Las opiniones y experiencias con este simulador dentro de la materia no fueron muy buenas, fuera del gran esfuerzo que pusieron los profesores en que aprendieramos dandonos mini tutoriales no resultaron como se esperaba.
+ 
+
+\end{enumerate}
