terminado la seccion estado del Arte

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -371,11 +371,22 @@ Las versiones de la arquitectura Q están pensadas para incorporar funcionalidad
 
 En un principio la materia Organizacion y Arquitectura eligio el simulador intel 8085 para enseniar assembler.
 
-\begin{enumerate}
+\begin{itemize}
+
 \item \textbf{Simulador intel 8085}
 
 Es un simulador y ensamblador para el microprocesador Intel 8085, que ofrece una interfas que a simple vista es dificil de entender, una parte para la ejecucion y otra parte para ver el estado de la memoria y registros. 
-Las opiniones y experiencias con este simulador dentro de la materia no fueron muy buenas, fuera del gran esfuerzo que pusieron los profesores en que aprendieramos dandonos mini tutoriales no resultaron como se esperaba.
- 
+Las opiniones y experiencias con este simulador dentro de la materia no fueron muy buenas, fuera del gran esfuerzo que pusieron los profesores en que aprendieramos, dandonos mini tutoriales no resultaron como se esperaba. (Hmm si mi memoria no me falla se utilizo en un cuatrimestre [Mara si me equivoco corregime ehh!]). 
+Todo lo que se trabajaba en ese simulador tambien se escribia a en hoja. 
 
-\end{enumerate}
+\item En los primeros cuatrimeste la materia eligio incorporar la \textbf{Arquitectura QARQ} con su especificacion y ademas un lenguaje micro --(no me acuerdo el nombre). 
+En estos tiempos se desistio en utilizar un simulador complejo pero no dejaron de buscar e investigar alguna alternativa que pueda convivir con los estudantes. Todos los ejercicios se hacian en papel, la unica forma de verificar resultados es atraves de los profesores.
+
+\item Hace poco la materia o mejor dicho el equipo de Orga decidio dividir la especificacion de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Q}. 
+
+Cada Arquitectura Qi agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) que la anterior, son como capas de cebolla. Ademas incorporaron un trabajo practico donde tiene que programar un programa que monocromatice una image en la \textbf{Arquitectura IA - 32}. En el enunciado se explica bastante como funciona esta arquitectura. Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel.  
+
+\item \textbf{Hasta ahora!!!} 
+La idea es incorporar el \textbf{Simulador Qsim} en la materia para que los chicos puedan entender el ciclo de instruccion en la etapa de ejecucion de un programa, poder ver que es lo que estan haciendo, chequear el efecto de los programas creados, jugar y divertirse aprendiendo :P (lo siento estoy re quemada). Pensamos que nuestro simulador va a encagar en la materia ya que cubre las necesidades basicas de un simulador. :D
+
+\end{itemize}
